# video_creator

./: CMakeLists.txt
include/video_creator/: color.h  frame_processor.h  frame_visualizer.h  script_interpreter.h
include/video_creator/math/: math.h
include/video_creator/r3d/: camera.h  mesh.h  primitives.h  scene.h
include/video_creator/text/: text.h  text_impl.h
pres/cst-seminar/: pres.txt
src/: frame_processor.cpp  frame_visualizer.cpp  script_interpreter.cpp
src/r3d/: camera.cpp  mesh.cpp  primitives.cpp  scene.cpp
src/text/: text.cpp  text_impl.cpp
tools/: cst-presentation.cpp
